--- a/community_base/src/main/resources/application.yml
+++ b/community_base/src/main/resources/application.yml
@@ -4,7 +4,8 @@ spring:
   application:
     name: community-base
   datasource:
-    url: jdbc:mysql://192.168.1.188:3306/community_base?characterEncoding=UTF-8&useSSL=false
+#    url: jdbc:mysql://192.168.1.188:3306/community_base?characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/community_base?characterEncoding=UTF-8&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: root
