--- a/community_article/pom.xml
+++ b/community_article/pom.xml
@@ -9,14 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>community_recruit</artifactId>
+    <artifactId>community_article</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.community</groupId>
-            <artifactId>community_commom</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
 
 </project>
