--- a/community_article/pom.xml
+++ b/community_article/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>community_article</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.community</groupId>
+            <artifactId>community_commom</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
