--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>community_qa</module>
         <module>community_qa</module>
         <module>community_article</module>
+        <module>community_spit</module>
     </modules>
     <packaging>pom</packaging>
 
