--- a/community_spit/src/main/resources/application.yml
+++ b/community_spit/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 9004
+  port: 9002
 spring:
   application:
-    name: community-article
+    name: community-recruit
   datasource:
 #    url: jdbc:mysql://192.168.1.188:3306/community_base?characterEncoding=UTF-8&useSSL=false
-    url: jdbc:mysql://127.0.0.1:3306/community_article?characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/community_recruit?characterEncoding=UTF-8&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: root
@@ -13,5 +13,9 @@ spring:
     database: mysql
     show-sql: true
     generate-ddl: true
+  data:
+    mongodb:
+      host: 127.0.0.1
+      database: spitdb
   redis:
     host: 127.0.0.1
