--- a/community_article/src/main/resources/application.yml
+++ b/community_article/src/main/resources/application.yml
@@ -15,3 +15,7 @@ spring:
     generate-ddl: true
   redis:
     host: 127.0.0.1
+eureka:
+  client:
+    service-url:
+      defaultZone : http://localhost:9000/eureka/
