--- a/community_qa/pom.xml
+++ b/community_qa/pom.xml
@@ -10,10 +10,23 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>community_qa</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>../community_eureka</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>com.community</groupId>
             <artifactId>community_commom</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.community</groupId>
+            <artifactId>community_api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
