--- a/community_spit/src/main/resources/application.yml
+++ b/community_spit/src/main/resources/application.yml
@@ -19,3 +19,7 @@ spring:
       database: spitdb
   redis:
     host: 127.0.0.1
+eureka:
+  client:
+    service-url:
+      defaultZone : http://localhost:9000/eureka/
