--- a/community_test/src/main/resources/application.yml
+++ b/community_test/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 9003
+  port: 9008
 spring:
   application:
-    name: community-qa
+    name: community-test
   datasource:
 #    url: jdbc:mysql://192.168.1.188:3306/community_base?characterEncoding=UTF-8&useSSL=false
-    url: jdbc:mysql://127.0.0.1:3306/community_qa?characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/community_article?characterEncoding=UTF-8&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: root
@@ -13,3 +13,9 @@ spring:
     database: mysql
     show-sql: true
     generate-ddl: true
+  redis:
+    host: 127.0.0.1
+eureka:
+  client:
+    service-url:
+      defaultZone : http://localhost:9000/eureka/
