--- a/community_article/pom.xml
+++ b/community_article/pom.xml
@@ -11,9 +11,7 @@
 
     <artifactId>community_article</artifactId>
     <packaging>pom</packaging>
-    <modules>
-        <module>../com.community.api</module>
-    </modules>
+
     <dependencies>
         <dependency>
             <groupId>com.community</groupId>
@@ -27,6 +25,14 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
     </dependencies>
 
