--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>api</module>
         <module>community_manager</module>
         <module>communtiy_web</module>
+        <module>community_user</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -78,14 +79,6 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
