--- a/community_user/pom.xml
+++ b/community_user/pom.xml
@@ -23,6 +23,12 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.community</groupId>
+            <artifactId>community_commom</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
